@@ -11,6 +11,8 @@ Changes in 3.0 alpha3
        vol charset is same value as unix charset by default
 * FIX: afpd: Server info packet was malformed resulting in broken
        server names being displayed on clients
+* FIX: afpd: Byte order detection. Fixes an error where Netatalk on
+       OpenIndiana returned wrong volume size information.
 
 Changes in 3.0 alpha2
 =====================
